refactored AddressBookHistoryLookup to the blocknodeapp where it is used. added in getting the whole RangedAddressBookHistory from mirror node
____________________________________________________________________
Signed-off-by: berryware <231598+berryware@users.noreply.github.com>